@@ -9,6 +9,7 @@ netcfg (0.67) UNRELEASED; urgency=low
   * Joshua Kwan
     - add a NETCFG_VERSION thingy so it's easier to figure out who's using
       what.
+    - Don't reset the hostname to 'debian' on a failed seed from DNS.
 
  -- Per Olofsson <pelle@dsv.su.se>  Mon, 24 May 2004 21:57:42 +0200
 
